--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -11,6 +11,10 @@
   padding: 0 20px;
 }
 
+.addedClasses {
+  padding-left: 70px;
+}
+
 @media screen and (min-width: 720px) {
   .img_wrapper {
     min-height: 450px;
