--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,16 +4,20 @@
   --dark2: #202128;
   --dark3: #272830;
   --dark4: #393b46;
+
   --brand: #0091ea; //!
   --brand_dark: #0065a3; //!
   --brand_light: #33a7ee; //!
-  --brand_secondary: #d500f9; //!
-  --brand_hover: #8ba4ff;
+
+  --secondary: #f50057; //!
+  --secondary_dark: #ab003c; //!
+  --secondary_light: #f73378; //!
+
   --white: #fff;
+  --gray: #f5f5f5;
   --gray1: #8a8c99;
   --gray2: #dadce5;
   --gray3: #edeef2;
-
   --gray4: #414141;
   --gray5: #a5a5a5;
 
