--- a/src/components/header/side-bar/side-bar-item/side-bar-item.module.scss
+++ b/src/components/header/side-bar/side-bar-item/side-bar-item.module.scss
@@ -1,10 +1,20 @@
 .link {
+  position: relative;
   width: 100%;
-  padding: 10px 25px;
+  padding: 10px 25px 10px 45px;
+  color: var(--white);
 
+  font-size: 20px;
   transition: all var(--transition);
 
   &:hover {
     background-color: var(--brand);
+  }
+
+  svg {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
   }
 }
