--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -11,6 +11,8 @@
   .logo {
     margin: 0;
     padding: 0;
+    display: flex;
+    align-items: center;
 
     font-size: 24px;
     font-weight: bold;
