--- a/src/UI/product-item/product-item.module.scss
+++ b/src/UI/product-item/product-item.module.scss
@@ -8,6 +8,11 @@
   border-radius: 10px;
   box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0px rgb(0 0 0 / 14%),
     0 1px 3px 0px rgb(0 0 0 / 12%);
+  transition: all var(--transition);
+
+  &:hover {
+    box-shadow: 0 10px 25px rgb(41 52 73 / 50%);
+  }
 }
 
 .text_wrapper {
